--- a/Pract4/Pract4/MainWindow.xaml
+++ b/Pract4/Pract4/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="455.6" Width="624.8" ResizeMode="NoResize">
     <Grid  Background="#FF4E4E4E">
         <Button Content="Добавить" HorizontalAlignment="Left" Margin="42,104,0,0" VerticalAlignment="Top" Width="104" Height="27" Click="Button_Click" Background="#FF777777"/>
-        <ComboBox Name ="X" HorizontalAlignment="Left" Margin="42,59,0,0" VerticalAlignment="Top" Width="42" SelectionChanged="X_SelectionChanged_1" Background="Black" >
+        <ComboBox Name ="X" HorizontalAlignment="Left" Margin="42,59,0,0" VerticalAlignment="Top" Width="42"  Background="Black" >
             <TextBlock>1</TextBlock>
             <TextBlock>2</TextBlock>
             <TextBlock>3</TextBlock>
@@ -20,7 +20,7 @@
             <TextBlock>9</TextBlock>
             <TextBlock>10</TextBlock>
         </ComboBox>
-        <ComboBox Name ="Y" HorizontalAlignment="Left" Margin="101,59,0,0" VerticalAlignment="Top" Width="45" SelectionChanged="Y_SelectionChanged_1" >
+        <ComboBox Name ="Y" HorizontalAlignment="Left" Margin="101,59,0,0" VerticalAlignment="Top" Width="45"  >
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                     <GradientStop Color="#FFF0F0F0" Offset="0"/>
